Chỉnh lỗi phạm vi sp